# autodiff-demo

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  default.nix
src/: autodiff.h  autodiff_demo.cpp  autodiff_demo.h  main.cpp  shell.html
